--- a/svg.html
+++ b/svg.html
@@ -88,14 +88,23 @@
             <path d="M589 285 l-1 8 l23 0 l1 -9 z" fill="#600905"/>
             <path d="M614 272 l29 -8 l0 6 l-26 1 z" fill="#780000v b"/>
 
-
-
-
-
-
-
-
-
+	    <!-- หลังคา -->
+            <path d="M300 150 l2 -18 l244 135 l1 19 z" fill="#d1d0cf"/>
+            <path d="M545 267 l1 19 l120 -70 l-1 -19 z" fill="#b79ea0"/>
+            <path d="M545 270 l0 -8 l-277 -159 l-1 10 z" fill="#dd7a23"/>
+            <path d="M545 260 l0 8 l157 -92 l1 -5 z" fill="#a45c2e"/>
+            <path d="M270 105 l-1 -14 l12 5 l51 -26 l214 130 l1 64 z" fill="#ef8828"/>
+            <path d="M547 259 l-1 -64 l100 -59 l46 30 l12 -10 l1 14 z" fill="#c1590f"/>
+            <path d="M330 70 l7 -3 l207 124 l0 9 z" fill="#dc7625"/>
+            <path d="M545 200 l0 -9 l92 -54 l8 4 z" fill="#934007"/>
+            <path d="M315 58 l3 -9 l229 130 l-2 11 z" fill="#e7a66c"/>
+            <path d="M545 193 l2 -11 l86 -47 l4 4 z" fill="#99592b"/>
+            <path d="M548 184 l-229 -130 l4 -16 l13 8 l35 -16 l175 101 z" fill="#ed8728"/>
+            <path d="M548 183 l-2 -53 l51 -30 l36 19 l16 -8 l4 16 z" fill="#c25718"/>
+            <path d="M370 30 l5 -10 l171 98 l-1 13 z" fill="#d76b0f"/>
+            <path d="M548 130 l18 -52 l33 22 z" fill="#bfb6af"/>
+            <path d="M565 80 l-171 -100 l-17 41 l171 98 z" fill="#f08826"/>
+            <path d="M545 132 l1 -13 l42 -26 l8 9 z" fill="#964607"/>
 
         </svg>
     </body>
