--- a/svg.html
+++ b/svg.html
@@ -105,6 +105,16 @@
             <path d="M548 130 l18 -52 l33 22 z" fill="#bfb6af"/>
             <path d="M565 80 l-171 -100 l-17 41 l171 98 z" fill="#f08826"/>
             <path d="M545 132 l1 -13 l42 -26 l8 9 z" fill="#964607"/>
+		
+	     <!-- รั้วก้อนๆ1 -->
+            <path d="M270 660 l44 13 l0 44 l-45 -15 z" fill="#D1D1D1"/>
+            <path d="M314 673 l0 44 l205 -136 l1 -38 z" fill="#C8C8C8"/>
+            <path d="M314 673 l206 -130 l-36 -26 l-214 143 z" fill="#D1D1D1"/>
+
+            <!-- รั้วก้อนๆ2 -->
+            <path d="M45 480 l40 14 l-1 39 l-41 -14 z" fill="#D1D1D1"/>
+            <path d="M85 494 l-1 39 l192 -113 l6 -37" fill="#C8C8C8"/>
+            <path d="M45 480 l40 14 l197 -111 l-32 -23 z" fill="#D1D1D1"/>
 
         </svg>
     </body>
