--- a/svg.html
+++ b/svg.html
@@ -12,6 +12,17 @@
 </style>
 
         <svg viewbox="0 0 1200 800">
+           <!-- ฐานลอย-->
+    <path d="M-327 549 l790 -459 l652 385 l-800 500 z"style="fill:#F5F5F5;stroke:black;stroke-width:5;opacity:0.5"/>
+    <path d="M-227 615 l642 426 l0 73 l-642 -426 z" style="fill:#F5F5F5;stroke:black;stroke-width:5;opacity:0.5"/>
+    <path d="M 1115 476 l-800 500 l0 73 l800 -500 z" style="fill:#F5F5F5;stroke:black;stroke-width:5;opacity:0.5"/>
+    
+    <!-- ฐานลอย-->
+    <!-- sun -->
+<ellipse cx="20" cy="20" rx="60" ry="60" fill="#f9d71c">
+    <animate attributeName="cx" values="55;60;55" dur="4s" repeatCount="indefinite" />
+</ellipse>
+<!-- sun -->
             <!-- เมฆ -->
     <ellipse cx="50" cy="50" rx="30" ry="30" fill="#eaf2f9">
         <animate attributeName="cx" values="35;55;35" dur="2s" repeatCount="indefinite" />
@@ -29,8 +40,53 @@
         <animate attributeName="cx" values="55;35;55" dur="2s" repeatCount="indefinite" />
    </ellipse>
 <!-- เมฆ -->
+    <!-- เมฆ -->
+    <ellipse cx="900" cy="80" rx="30" ry="30" fill="#eaf2f9">
+        <animate attributeName="cx" values="35;55;35" dur="2s" repeatCount="indefinite" />
+   </ellipse>
+   <ellipse cx="910" cy="80" rx="30" ry="30" fill="#eaf2f9">
+        <animate attributeName="cx" values="55;60;55" dur="4s" repeatCount="indefinite" />
+   </ellipse>
+   <ellipse cx="880" cy="85" rx="30" ry="20" fill="#eaf2f9">
+        <animate attributeName="ry" values="20;30;20" dur="2s" repeatCount="indefinite" />
+   </ellipse>
+   <ellipse cx="920" cy="85" rx="30" ry="20" fill="#eaf2f9">
+        <animate attributeName="ry" values="25;20;25" dur="2s" repeatCount="indefinite" />
+   </ellipse>
+   <ellipse cx="900" cy="90" rx="30" ry="20" fill="#eaf2f9">
+        <animate attributeName="cx" values="55;35;55" dur="2s" repeatCount="indefinite" />
+   </ellipse>
+<!-- เมฆ -->
+<!-- เมฆ -->
+<ellipse cx="980" cy="155" rx="30" ry="20" fill="#eaf2f9">
+    <animate attributeName="ry" values="20;30;20" dur="2s" repeatCount="indefinite" />
+</ellipse>
+<ellipse cx="1020" cy="155" rx="30" ry="20" fill="#eaf2f9">
+    <animate attributeName="ry" values="25;20;25" dur="2s" repeatCount="indefinite" />
+</ellipse>
+<ellipse cx="1000" cy="160" rx="30" ry="20" fill="#eaf2f9">
+    <animate attributeName="cx" values="55;35;55" dur="2s" repeatCount="indefinite" />
+</ellipse>
+<!-- เมฆ -->
+<!-- เมฆ -->
+<ellipse cx="1300" cy="380" rx="30" ry="30" fill="#eaf2f9">
+    <animate attributeName="cx" values="35;55;35" dur="2s" repeatCount="indefinite" />
+</ellipse>
+<ellipse cx="1310" cy="380" rx="30" ry="30" fill="#eaf2f9">
+    <animate attributeName="cx" values="55;60;55" dur="4s" repeatCount="indefinite" />
+</ellipse>
+<ellipse cx="1280" cy="385" rx="30" ry="20" fill="#eaf2f9">
+    <animate attributeName="ry" values="20;30;20" dur="2s" repeatCount="indefinite" />
+</ellipse>
+<ellipse cx="1320" cy="385" rx="30" ry="20" fill="#eaf2f9">
+    <animate attributeName="ry" values="25;20;25" dur="2s" repeatCount="indefinite" />
+</ellipse>
+<ellipse cx="1300" cy="390" rx="30" ry="20" fill="#eaf2f9">
+    <animate attributeName="cx" values="55;35;55" dur="2s" repeatCount="indefinite" />
+</ellipse>
+<!-- เมฆ -->
 
-            
+<!--ตัวตึก-->
             <path d="M267 401 l61 34 l13 -5 l17 5 l0 21 l32 16 l13 -8 l15 6 l0 17 l32 17 l13 -3 l15 5 l0 18 l40 25 l-245 160 l-213 -138 z" fill="#ead9c8"/>
             <path d="M238 368 l0 16 l90 51 l-2 -15 z" fill="#924346"/>
             <path d="M326 420 l14 -7 l2 17 l-14 5 z" fill="#6a2725"/>
@@ -87,7 +143,7 @@
             <path d="M556 298 l0 9 l31 2 l-2 -10 z" fill="#6b1011"/>
             <path d="M589 285 l-1 8 l23 0 l1 -9 z" fill="#600905"/>
             <path d="M614 272 l29 -8 l0 6 l-26 1 z" fill="#780000v b"/>
-
+<!--ตัวตึก-->
 	    <!-- หลังคา -->
             <path d="M300 150 l2 -18 l244 135 l1 19 z" fill="#d1d0cf"/>
             <path d="M545 267 l1 19 l120 -70 l-1 -19 z" fill="#b79ea0"/>
