--- a/svg.html
+++ b/svg.html
@@ -171,6 +171,73 @@
             <path d="M45 480 l40 14 l-1 39 l-41 -14 z" fill="#D1D1D1"/>
             <path d="M85 494 l-1 39 l192 -113 l6 -37" fill="#C8C8C8"/>
             <path d="M45 480 l40 14 l197 -111 l-32 -23 z" fill="#D1D1D1"/>
+		<!--ธง-->
+        <rect x="65" y="162" width="150" height="90" fill="#ff1935"/>
+        <rect x="60" y="155" width="8" height="200" fill="#854111"/>
+        <path d="M78 358 l-25 1 l7 -14 l8 0 z" fill="#423c38"/>
+    
+        
+<!--ดาว-->
+            <g transform="translate(100,155) scale(0.1,0.1)">
+                <path d="M80 195 l28 0 l8 11 z" fill="#ffc200"/>
+                <path d="M80 195 l23 17 l13 -6 z" fill="#fefd05"/>
+                <path d="M95 238 l8 -27 l13 -6 z" fill="#ffc200"/>
+                <path d="M95 238 l21 -33 l1 16 z" fill="#fefd05"/>
+                <path d="M140 238 l-24 -33 l1 16 z" fill="#ffc200"/>
+                <path d="M140 238 l-24 -33 l15 7 z" fill="#fefd05"/>
+                <path d="M153 195 l-37 11 l15 7 z" fill="#ffc200"/>
+                <path d="M153 195 l-37 11 l10 -11 z" fill="#fefd05"/>
+                <path d="M117 168 l-1 38 l10 -11 z" fill="#ffc200"/>
+                <path d="M117 168 l-1 38 l-8 -11 z" fill="#fefd05"/>
+            </g>
+            <g transform="translate(110,165) scale(0.1,0.1)">
+                <path d="M80 195 l28 0 l8 11 z" fill="#ffc200"/>
+                <path d="M80 195 l23 17 l13 -6 z" fill="#fefd05"/>
+                <path d="M95 238 l8 -27 l13 -6 z" fill="#ffc200"/>
+                <path d="M95 238 l21 -33 l1 16 z" fill="#fefd05"/>
+                <path d="M140 238 l-24 -33 l1 16 z" fill="#ffc200"/>
+                <path d="M140 238 l-24 -33 l15 7 z" fill="#fefd05"/>
+                <path d="M153 195 l-37 11 l15 7 z" fill="#ffc200"/>
+                <path d="M153 195 l-37 11 l10 -11 z" fill="#fefd05"/>
+                <path d="M117 168 l-1 38 l10 -11 z" fill="#ffc200"/>
+                <path d="M117 168 l-1 38 l-8 -11 z" fill="#fefd05"/>
+            </g>
+            <g transform="translate(110,180) scale(0.1,0.1)">
+                <path d="M80 195 l28 0 l8 11 z" fill="#ffc200"/>
+                <path d="M80 195 l23 17 l13 -6 z" fill="#fefd05"/>
+                <path d="M95 238 l8 -27 l13 -6 z" fill="#ffc200"/>
+                <path d="M95 238 l21 -33 l1 16 z" fill="#fefd05"/>
+                <path d="M140 238 l-24 -33 l1 16 z" fill="#ffc200"/>
+                <path d="M140 238 l-24 -33 l15 7 z" fill="#fefd05"/>
+                <path d="M153 195 l-37 11 l15 7 z" fill="#ffc200"/>
+                <path d="M153 195 l-37 11 l10 -11 z" fill="#fefd05"/>
+                <path d="M117 168 l-1 38 l10 -11 z" fill="#ffc200"/>
+                <path d="M117 168 l-1 38 l-8 -11 z" fill="#fefd05"/>
+            </g>
+            <g transform="translate(100,192) scale(0.1,0.1)">
+                <path d="M80 195 l28 0 l8 11 z" fill="#ffc200"/>
+                <path d="M80 195 l23 17 l13 -6 z" fill="#fefd05"/>
+                <path d="M95 238 l8 -27 l13 -6 z" fill="#ffc200"/>
+                <path d="M95 238 l21 -33 l1 16 z" fill="#fefd05"/>
+                <path d="M140 238 l-24 -33 l1 16 z" fill="#ffc200"/>
+                <path d="M140 238 l-24 -33 l15 7 z" fill="#fefd05"/>
+                <path d="M153 195 l-37 11 l15 7 z" fill="#ffc200"/>
+                <path d="M153 195 l-37 11 l10 -11 z" fill="#fefd05"/>
+                <path d="M117 168 l-1 38 l10 -11 z" fill="#ffc200"/>
+                <path d="M117 168 l-1 38 l-8 -11 z" fill="#fefd05"/>
+            </g>
+            <g transform="translate(35,90) scale(0.5,0.5)">
+                <path d="M80 195 l28 0 l8 11 z" fill="#ffc200"/>
+                <path d="M80 195 l23 17 l13 -6 z" fill="#fefd05"/>
+                <path d="M95 238 l8 -27 l13 -6 z" fill="#ffc200"/>
+                <path d="M95 238 l21 -33 l1 16 z" fill="#fefd05"/>
+                <path d="M140 238 l-24 -33 l1 16 z" fill="#ffc200"/>
+                <path d="M140 238 l-24 -33 l15 7 z" fill="#fefd05"/>
+                <path d="M153 195 l-37 11 l15 7 z" fill="#ffc200"/>
+                <path d="M153 195 l-37 11 l10 -11 z" fill="#fefd05"/>
+                <path d="M117 168 l-1 38 l10 -11 z" fill="#ffc200"/>
+                <path d="M117 168 l-1 38 l-8 -11 z" fill="#fefd05"/>
+            </g>
 
         </svg>
     </body>
