--- a/svg.html
+++ b/svg.html
@@ -171,6 +171,30 @@
             <path d="M45 480 l40 14 l-1 39 l-41 -14 z" fill="#D1D1D1"/>
             <path d="M85 494 l-1 39 l192 -113 l6 -37" fill="#C8C8C8"/>
             <path d="M45 480 l40 14 l197 -111 l-32 -23 z" fill="#D1D1D1"/>
+		
+	    <!-- ต้นไม้เหลี่ยม1  -->
+            <path d="M414 656 l6 0 l1 53 l-11 0 z" fill="#694A4A"/>
+            <path d="M421 709 l9 -11 l-5 -42 l-5 0 z" fill="#523B3B"/>
+            <path d="M375 654 l72 0 l-34 -90 z" fill="#36AD3F"/>
+            <path d="M447 654 l15 -25 l-49 -65 z" fill="#35A83E"/>
+            <path d="M375 610 l75 1 l-36 -89 z" fill="#35C33F"/>
+            <path d="M450 611 l14 -25 l-50 -64 z" fill="#37B640"/>
+            <path d="M384 566 l58 -1 l-28 -72 z" fill="#3ED74A"/>
+            <path d="M442 565 l12 -21 l-40 -51 z" fill="#41CD4C"/>
+
+            <!-- ต้นไม้เหลี่ยมๆ1  -->
+            <path d="M566 616 l-3 43 l11 0 l-2 -43 z" fill="#694A4A"/>
+            <path d="M572 616 l4 0 l4 35 l-6 8 z" fill="#523B3B"/>
+            <path d="M535 563 l49 0 l0 50 l-48 1 z" fill="#36AD3F"/>
+            <path d="M584 563 l0 50 l23 -18 l-1 -49 z" fill="#35A83E"/>
+            <path d="M535 563 l49 0 l22 -17 l-51 -4 z" fill="#39B243"/>
+            <path d="M548 559 l33 0 l0 -33 l-33 -1 z" fill="#35C33F"/>
+            <path d="M581 559 l15 -12 l0 -35 l-15 14 z" fill="#37B640"/>
+            <path d="M548 525 l33 1 l15 -14 l-34 -1 z" fill="#39CD44"/>
+            <path d="M558 522 l0 -21 l19 -1 l1 21 z" fill="#3ED74A"/>
+            <path d="M578 521 l11 -9 l-1 -19 l-11 7 z" fill="#41CD4C"/>
+            <path d="M558 501 l7 -10 l23 2 l-11 7 z" fill="#48D252"/>
+		
 <!--ธง-->
         <!--ฐาน-->
             <rect x="60" y="155" width="8" height="200" fill="#854111"/>
