--- a/svg.html
+++ b/svg.html
@@ -181,6 +181,16 @@
             <path d="M450 611 l14 -25 l-50 -64 z" fill="#37B640"/>
             <path d="M384 566 l58 -1 l-28 -72 z" fill="#3ED74A"/>
             <path d="M442 565 l12 -21 l-40 -51 z" fill="#41CD4C"/>
+		
+            <!-- ต้นไม้เหลี่ยม2  -->
+            <path d="M181 342 l1 34 l5 -6 l-2 -28 z" fill="#523B3B"/>
+            <path d="M177 342 l-3 34 l8 0 l-1 -34 z" fill="#694A4A"/>
+            <path d= "M200 340 l9 -17 l-33 -40 z" fill="#36AD3F"/>
+            <path d="M152 340 l24 -57 l24 57 z" fill="#35A83E"/>
+            <path d="M178 253 l32 42 l-11 16 z" fill="#35C33F"/>
+            <path d="M178 253 l21 58 l-47 1 z" fill="#37B640"/>
+            <path d="M159 282 l37 -1 l-19 -47 z" fill="#3ED74A"/>
+            <path d="M177 234 l27 34 l-8 13 z" fill="#41CD4C"/>
 
             <!-- ต้นไม้เหลี่ยมๆ1  -->
             <path d="M566 616 l-3 43 l11 0 l-2 -43 z" fill="#694A4A"/>
@@ -203,6 +213,20 @@
                 <animateTransform dur="4s" repeatCount="indefinite"
                 attributeName="transform" type="translate" values="0 0;0 2;0 20"/>
                 <rect x="68" y="160" width="150" height="90" fill="#ff1935"/>
+		   
+            <!-- ต้นไม้เหลี่ยมๆ2  -->
+            <path d="M82 436 l5 0 l1 19 l-8 4 z" fill="#694A4A"/>
+            <path d="M87 436 l5 0 l1 15 l-5 4 z" fill="#523B3B"/>
+            <path d="M51 385 l0 48 l48 -1 l0 -48 z" fill="#36AD3F"/>
+            <path d="M99 384 l22 -18 l1 48 l-23 18 z" fill="#35A83E"/>
+            <path d="M71 364 l-20 21 l48 -1 l22 -18 z" fill="#39B243"/>
+            <path d="M64 379 l31 1 l0 -34 l-32 1 z" fill="#35C33F"/>
+            <path d="M95 346 l0 34 l15 -13 l0 -32 z" fill="#37B640"/>
+            <path d="M95 346 l0 34 l15 -13 l0 -32 z" fill="#39CD44"/>
+            <path d="M63 347 l32 -1 l15 -11 l-33 -2 z" fill="#3ED74A"/>
+            <path d="M73 343 l0 -21 l20 0 l0 21 z" fill="#41CD4C"/>
+            <path d="M93 322 l10 -8 l-1 21 l-9 8 z" fill="#48D252"/>
+            <path d="M73 322 l8 -8 l22 0 l-10 8 z" fill="#41CD4C"/>
     
         <!--ดาว-->
                 <g transform="translate(100,155) scale(0.1,0.1)">
