--- a/svg.html
+++ b/svg.html
@@ -13,9 +13,9 @@
 
         <svg viewbox="0 0 1200 800">
     <!-- ฐานลอย-->
-    <path d="M-327 549 l790 -459 l652 385 l-800 500 z"style="fill:#F5F5F5;stroke:black;stroke-width:5;opacity:0.5"/>
-    <path d="M-227 615 l642 426 l0 73 l-642 -426 z" style="fill:#F5F5F5;stroke:black;stroke-width:5;opacity:0.5"/>
-    <path d="M 1115 476 l-800 500 l0 73 l800 -500 z" style="fill:#F5F5F5;stroke:black;stroke-width:5;opacity:0.5"/>
+    <path d="M-327 549 l790 -459 l652 385 l-800 500 z"style="fill:#F5F5F5;stroke:black;stroke-width:0;opacity:0.5"/>
+    <path d="M-400 500 l642 426 l0 73 l-642 -426 z" style="fill:#E7E7E7;stroke:black;stroke-width:0;opacity:0.5"/>
+    <path d="M 1115 476 l-800 500 l0 73 l800 -500 z" style="fill:#E7E7E7;stroke:black;stroke-width:0;opacity:0.5"/>
     
     <!-- ฐานลอย-->
     <!-- sun -->
