--- a/svg.html
+++ b/svg.html
@@ -146,14 +146,14 @@
             <path d="M545 132 l1 -13 l42 -26 l8 9 z" fill="#964607"/>
 		
 	     <!-- รั้วก้อนๆ1 -->
-            <path d="M270 660 l44 13 l0 44 l-45 -15 z" fill="#D1D1D1"/>
+            <path d="M270 660 l44 13 l0 44 l-45 -15 z" fill="#dcdcdc"/>
             <path d="M314 673 l0 44 l205 -136 l1 -38 z" fill="#C8C8C8"/>
-            <path d="M314 673 l206 -130 l-36 -26 l-214 143 z" fill="#D1D1D1"/>
+            <path d="M314 673 l206 -130 l-36 -26 l-214 143 z" fill="#eef0ef"/>
 
             <!-- รั้วก้อนๆ2 -->
-            <path d="M45 480 l40 14 l-1 39 l-41 -14 z" fill="#D1D1D1"/>
+            <path d="M45 480 l40 14 l-1 39 l-41 -14 z" fill="#dcdcdc"/>
             <path d="M85 494 l-1 39 l192 -113 l6 -37" fill="#C8C8C8"/>
-            <path d="M45 480 l40 14 l197 -111 l-32 -23 z" fill="#D1D1D1"/>
+            <path d="M45 480 l40 14 l197 -111 l-32 -23 z" fill="#eef0ef"/>
 
              <!-- ต้นไม้เหลี่ยม1  -->
              <path d="M414 656 l6 0 l1 53 l-11 0 z" fill="#694A4A"/>
