--- a/svg.html
+++ b/svg.html
@@ -113,7 +113,6 @@
             <path d="M538 348 l1 8 l137 -75 l-4 -12 z" fill="#787471"/>
             <path d="M390 247 l27 3 l46 3 l0 -15 l-47 -29 l2 26 z" fill="#928e8e"/>
 
-            <!-- ระเบียง -->
             <path d="M325 170 l-60 34 l274 165 l170 -103 l-64 -34 l0 5 l51 28 l-157 96 l-263 -157 l49 -28 z" fill="#a6a6a6"/>
             <path d="M300 190 l4 -1 l1 14 l-3 2 z" fill="#bfc3c5"/>
             <path d="M297 193 l3 -3 l2 15 l-4 1 z" fill="#a6a6a6"/>
@@ -135,7 +134,6 @@
             <path d="M483 336 l3 3 l-1 8 l-5 -1 z" fill="#a6a6a6"/>
             <path d="M510 353 l4 3 l0 12 l-5 -1 z" fill="#bfc3c5"/>
             <path d="M514 356 l3 1 l1 10 l-4 1 z" fill="#a6a6a6"/>
-<!-- ระเบียง -->
 
             <path d="M327 203 l28 1 l-1 9 l-28 -3 z" fill="#650b0a"/>
             <path d="M354 213 l2 14 l32 2 l0 -10 z" fill="#670704"/>
@@ -146,8 +144,24 @@
             <path d="M556 298 l0 9 l31 2 l-2 -10 z" fill="#6b1011"/>
             <path d="M589 285 l-1 8 l23 0 l1 -9 z" fill="#600905"/>
             <path d="M614 272 l29 -8 l0 6 l-26 1 z" fill="#780000"/>
-
-
+	    <path d="M651 240 l0 11 l4 2 l1 -10 z" fill="#a6a6a6"/>
+            <path d="M647 238 l4 2 l0 11 l-6 -2 z" fill="#bfc3c5"/>
+            <path d="M673 252 l6 4 l0 12 l-7 -3 z" fill="#bfc3c5"/>
+            <path d="M679 256 l3 2 l0 13 l-3 -3 z" fill="#a6a6a6"/>
+            <path d="M698 272 l3 -2 l-1 13 l-3 -2 z" fill="#bfc3c5"/>
+            <path d="M701 270 l4 -3 l1 14 l-6 2 z" fill="#a6a6a6"/>
+            <path d="M684 282 l4 -1 l4 16 l-6 1 z" fill="#a6a6a6"/>
+            <path d="M680 285 l4 -3 l2 16 l-6 -4 z" fill="#bfc3c5"/>
+            <path d="M660 297 l4 -3 l2 15 l-4 3 z" fill="#a6a6a6"/>
+            <path d="M656 300 l4 -3 l2 15 l-6 -3 z" fill="#bfc3c5"/>
+            <path d="M631 315 l5 -3 l1 16 l-5 1 z" fill="#a6a6a6"/>
+            <path d="M628 315 l3 0 l1 14 l-4 -1 z" fill="#bfc3c5"/>
+            <path d="M602 332 l3 -2 l2 15 l-4 3 z" fill="#a6a6a6"/>
+            <path d="M599 334 l3 -2 l1 16 l-4 -1 z" fill="#bfc3c5"/>
+            <path d="M571 350 l6 -3 l0 16 l-4 1 z" fill="#a6a6a6"/>
+            <path d="M571 350 l2 14 l-5 -1 l-1 -11 z" fill="#bfc3c5"/>
+            <path d="M540 368 l6 -4 l-1 15 l-3 2 z" fill="#a6a6a6"/>
+            <path d="M540 368 l2 13 l-8 -2 l2 -11 z" fill="#bfc3c5"/>
 
 <!--ตัวตึก-->
 	    <!-- หลังคา -->
@@ -169,14 +183,14 @@
             <path d="M545 132 l1 -13 l42 -26 l8 9 z" fill="#964607"/>
 		
 	     <!-- รั้วก้อนๆ1 -->
-            <path d="M270 660 l44 13 l0 44 l-45 -15 z" fill="#D1D1D1"/>
+            <path d="M270 660 l44 13 l0 44 l-45 -15 z" fill="#dcdcdc"/>
             <path d="M314 673 l0 44 l205 -136 l1 -38 z" fill="#C8C8C8"/>
-            <path d="M314 673 l206 -130 l-36 -26 l-214 143 z" fill="#D1D1D1"/>
+            <path d="M314 673 l206 -130 l-36 -26 l-214 143 z" fill="#eef0ef"/>
 
             <!-- รั้วก้อนๆ2 -->
-            <path d="M45 480 l40 14 l-1 39 l-41 -14 z" fill="#D1D1D1"/>
+            <path d="M45 480 l40 14 l-1 39 l-41 -14 z" fill="#dcdcdc"/>
             <path d="M85 494 l-1 39 l192 -113 l6 -37" fill="#C8C8C8"/>
-            <path d="M45 480 l40 14 l197 -111 l-32 -23 z" fill="#D1D1D1"/>
+            <path d="M45 480 l40 14 l197 -111 l-32 -23 z" fill="#eef0ef"/>
 
              <!-- ต้นไม้เหลี่ยม1  -->
              <path d="M414 656 l6 0 l1 53 l-11 0 z" fill="#694A4A"/>
