--- a/svg.html
+++ b/svg.html
@@ -8,28 +8,17 @@
             width: 100vw;
             height: 100vh;
             background: #95baa8;
-            background-blend-mode: inherit;
         }
 </style>
 
-        <svg viewbox="0 0 1200 800">
-     <!-- ฐานลอย-->
-     <defs>
-        <linearGradient id="linear" x1="0%" y1="0%" x2="100%" y2="0%">
-          <stop offset="0%"   stop-color="#A0522D"/>
-          <stop offset="100%" stop-color="#800000"/>
-        </linearGradient>
-      </defs>
-      <defs>
-        <linearGradient id="linear2" x1="0%" y1="0%" x2="100%" y2="0%">
-          <stop offset="0%"   stop-color="#2f5f00"/>
-          <stop offset="100%" stop-color="#F5F5F5"/>
-        </linearGradient>
-      </defs>
-     <path d="M-327 549 l790 -459 l652 385 l-800 500 z" style="fill:url(#linear2);stroke:black;stroke-width:0;opacity:0.5"></path>
-     <path d="M-327 549 l642 426 l0 73 l-642 -426 z" style="fill:url(#linear);stroke:black;stroke-width:0;opacity:0.5"></path>
-     <path d="M 1115 476 l-800 500 l0 73 l800 -500 z" style="fill:url(#linear);stroke:black;stroke-width:0;opacity:0.5"></path>
+<svg viewbox="0 0 1200 1080">
 <!-- ฐานลอย-->
+<path d="M-327 549 l790 -459 l652 385 l-800 500 z"style="fill:#F5F5F5;stroke:black;stroke-width:0;opacity:0.5"/>
+<path d="M-327 549 l642 426 l0 73 l-642 -426 z" style="fill:#E7E7E7;stroke:black;stroke-width:0;opacity:0.5"/>
+<path d="M 1115 476 l-800 500 l0 73 l800 -500 z" style="fill:#E7E7E7;stroke:black;stroke-width:0;opacity:0.5"/>
+
+
+    <!-- ฐานลอย-->
     <!-- sun -->
 <ellipse cx="20" cy="20" rx="60" ry="60" fill="#f9d71c">
     <animate attributeName="cx" values="55;60;55" dur="4s" repeatCount="indefinite" />
@@ -82,7 +71,6 @@
 <!-- เมฆ -->
 
 <!--ตัวตึก-->
-            <!-- ระเบียง -->
             <path d="M267 401 l61 34 l13 -5 l17 5 l0 21 l32 16 l13 -8 l15 6 l0 17 l32 17 l13 -3 l15 5 l0 18 l40 25 l-245 160 l-213 -138 z" fill="#ead9c8"/>
             <path d="M238 368 l0 16 l90 51 l-2 -15 z" fill="#924346"/>
             <path d="M326 420 l14 -7 l2 17 l-14 5 z" fill="#6a2725"/>
@@ -109,6 +97,10 @@
             <path d="M389 375 l15 2 l0 72 l-14 4 z" fill="#992524"/>
             <path d="M339 343 l19 7 l-2 70 l-16 -7 z" fill="#dc2323"/>
             <path d="M328 334 l11 9 l1 70 l-14 7 z" fill="#982426"/>
+            <path d="M325 170 l1 21 l-61 37 l0 -23 z" fill="#dcdcdc"/>
+            <path d="M265 205 l0 23 l116 70 l32 17 l127 67 l-1 -20 z" fill="#dcdcdc"/>
+            <path d="M539 362 l1 20 l164 -91 l1 -21 z" fill="#dcdcdc"/>
+            <path d="M645 232 l0 18 l47 26 l13 -6 z" fill="#dcdcdc"/>
 
             <path d="M326 162 l31 15 l-2 27 l-28 -1 z" fill="#e92e32"/>
             <path d="M357 177 l-3 36 l34 6 l-2 -25 z" fill="#db322f"/>
@@ -126,28 +118,6 @@
             <path d="M538 348 l1 8 l137 -75 l-4 -12 z" fill="#787471"/>
             <path d="M390 247 l27 3 l46 3 l0 -15 l-47 -29 l2 26 z" fill="#928e8e"/>
 
-            <path d="M325 170 l-60 34 l274 165 l170 -103 l-64 -34 l0 5 l51 28 l-157 96 l-263 -157 l49 -28 z" fill="#a6a6a6"/>
-            <path d="M300 190 l4 -1 l1 14 l-3 2 z" fill="#bfc3c5"/>
-            <path d="M297 193 l3 -3 l2 15 l-4 1 z" fill="#a6a6a6"/>
-            <path d="M267 208 l-2 19 l5 1 l0 -18 z" fill="#bfc3c5"/>
-            <path d="M270 210 l0 18 l5 -1 l0 -16 z" fill="#a6a6a6"/>
-            <path d="M297 226 l3 1 l0 17 l-3 -1 z" fill="#bfc3c5"/>
-            <path d="M300 227 l3 3 l1 12 l-3 1 z" fill="#a6a6a6"/>
-            <path d="M329 244 l3 3 l-1 15 l-4 -2 z" fill="#bfc3c5"/>
-            <path d="M332 247 l3 2 l0 13 l-4 -1 z" fill="#a6a6a6"/>
-            <path d="M358 263 l4 1 l0 15 l-4 -1 z" fill="#bfc3c5"/>
-            <path d="M362 264 l2 3 l1 11 l-3 1 z" fill="#a6a6a6"/>
-            <path d="M387 280 l5 2 l0 14 l-5 0 z" fill="#bfc3c5"/>
-            <path d="M392 282 l4 3 l0 10 l-4 1 z" fill="#a6a6a6"/>
-            <path d="M418 297 l4 4 l0 13 l-4 -17 z" fill="#bfc3c5"/>
-            <path d="M422 301 l3 1 l1 11 l-4 1 z" fill="#a6a6a6"/>
-            <path d="M449 317 l4 2 l-1 14 l-4 -1 z" fill="#bfc3c5"/>
-            <path d="M453 319 l4 -7 l0 17 l-5 4 z" fill="#a6a6a6"/>
-            <path d="M479 334 l4 2 l-3 10 l-3 2 z" fill="#bfc3c5"/>
-            <path d="M483 336 l3 3 l-1 8 l-5 -1 z" fill="#a6a6a6"/>
-            <path d="M510 353 l4 3 l0 12 l-5 -1 z" fill="#bfc3c5"/>
-            <path d="M514 356 l3 1 l1 10 l-4 1 z" fill="#a6a6a6"/>
-
             <path d="M327 203 l28 1 l-1 9 l-28 -3 z" fill="#650b0a"/>
             <path d="M354 213 l2 14 l32 2 l0 -10 z" fill="#670704"/>
             <path d="M390 237 l0 10 l27 3 l1 -15 z" fill="#6c0808"/>
@@ -156,26 +126,7 @@
             <path d="M524 307 l2 18 l28 -2 l1 -7 z" fill="#621012"/>
             <path d="M556 298 l0 9 l31 2 l-2 -10 z" fill="#6b1011"/>
             <path d="M589 285 l-1 8 l23 0 l1 -9 z" fill="#600905"/>
-            <path d="M614 272 l29 -8 l0 6 l-26 1 z" fill="#780000"/>
-	    <path d="M651 240 l0 11 l4 2 l1 -10 z" fill="#a6a6a6"/>
-            <path d="M647 238 l4 2 l0 11 l-6 -2 z" fill="#bfc3c5"/>
-            <path d="M673 252 l6 4 l0 12 l-7 -3 z" fill="#bfc3c5"/>
-            <path d="M679 256 l3 2 l0 13 l-3 -3 z" fill="#a6a6a6"/>
-            <path d="M698 272 l3 -2 l-1 13 l-3 -2 z" fill="#bfc3c5"/>
-            <path d="M701 270 l4 -3 l1 14 l-6 2 z" fill="#a6a6a6"/>
-            <path d="M684 282 l4 -1 l4 16 l-6 1 z" fill="#a6a6a6"/>
-            <path d="M680 285 l4 -3 l2 16 l-6 -4 z" fill="#bfc3c5"/>
-            <path d="M660 297 l4 -3 l2 15 l-4 3 z" fill="#a6a6a6"/>
-            <path d="M656 300 l4 -3 l2 15 l-6 -3 z" fill="#bfc3c5"/>
-            <path d="M631 315 l5 -3 l1 16 l-5 1 z" fill="#a6a6a6"/>
-            <path d="M628 315 l3 0 l1 14 l-4 -1 z" fill="#bfc3c5"/>
-            <path d="M602 332 l3 -2 l2 15 l-4 3 z" fill="#a6a6a6"/>
-            <path d="M599 334 l3 -2 l1 16 l-4 -1 z" fill="#bfc3c5"/>
-            <path d="M571 350 l6 -3 l0 16 l-4 1 z" fill="#a6a6a6"/>
-            <path d="M571 350 l2 14 l-5 -1 l-1 -11 z" fill="#bfc3c5"/>
-            <path d="M540 368 l6 -4 l-1 15 l-3 2 z" fill="#a6a6a6"/>
-            <path d="M540 368 l2 13 l-8 -2 l2 -11 z" fill="#bfc3c5"/>
-
+            <path d="M614 272 l29 -8 l0 6 l-26 1 z" fill="#780000v b"/>
 <!--ตัวตึก-->
 	    <!-- หลังคา -->
             <path d="M300 150 l2 -18 l244 135 l1 19 z" fill="#d1d0cf"/>
@@ -325,8 +276,6 @@
         <path d="M73 343 l0 -21 l20 0 l0 21 z" fill="#41CD4C"/>
         <path d="M93 322 l10 -8 l-1 21 l-9 8 z" fill="#48D252"/>
         <path d="M73 322 l8 -8 l22 0 l-10 8 z" fill="#41CD4C"/>
-
-
 
 
 
