--- a/svg.html
+++ b/svg.html
@@ -168,19 +168,20 @@
             <path d="M300 150 l2 -18 l244 135 l1 19 z" fill="#d1d0cf"/>
             <path d="M545 267 l1 19 l120 -70 l-1 -19 z" fill="#b79ea0"/>
             <path d="M545 270 l0 -8 l-277 -159 l-1 10 z" fill="#dd7a23"/>
+            <path d="M271 105 l-1 -14 l12 5 l51 -26 l214 130 l1 64 z" fill="#ef8828"/>
             <path d="M545 260 l0 8 l157 -92 l1 -5 z" fill="#a45c2e"/>
-            <path d="M270 105 l-1 -14 l12 5 l51 -26 l214 130 l1 64 z" fill="#ef8828"/>
-            <path d="M547 259 l-1 -64 l100 -59 l46 30 l12 -10 l1 14 z" fill="#c1590f"/>
             <path d="M330 70 l7 -3 l207 124 l0 9 z" fill="#dc7625"/>
-            <path d="M545 200 l0 -9 l92 -54 l8 4 z" fill="#934007"/>
-            <path d="M315 58 l3 -9 l229 130 l-2 11 z" fill="#e7a66c"/>
-            <path d="M545 193 l2 -11 l86 -47 l4 4 z" fill="#99592b"/>
-            <path d="M548 184 l-229 -130 l4 -16 l13 8 l35 -16 l175 101 z" fill="#ed8728"/>
-            <path d="M548 183 l-2 -53 l51 -30 l36 19 l16 -8 l4 16 z" fill="#c25718"/>
+            <path d="M548 259 l-1 -64 l100 -59 l46 30 l12 -10 l1 14 z" fill="#c1590f"/>
+            <path d="M321 68 l11 -2 l215 124 l0 10 z" fill="#dc7625"/>
+            <path d="M547 200 l0 -9 l96 -54 l8 4 z" fill="#934007"/>
+            <path d="M317 60 l3 -10 l229 130 l-2 11 z" fill="#e7a66c"/>
+            <path d="M547 191 l0 -10 l88 -47 l5 5 z" fill="#99592b"/>
+            <path d="M541 129.5 l18 -52 l33 22 z" fill="#bfb6af"/>
+            <path d="M547 184 l-229 -130 l4 -16 l13 8 l35 -16 l175 101 z" fill="#ed8728"/>
+            <path d="M547 183 l-2 -53 l51 -30 l36 19 l16 -8 l4 16 z" fill="#c25718"/>
+            <path d="M563 80 l-171 -100 l-17 41 l171 98 z" fill="#f08826"/>
+            <path d="M545 131 l1 -13 l42 -26 l8 9 z" fill="#964607"/>
             <path d="M370 30 l5 -10 l171 98 l-1 13 z" fill="#d76b0f"/>
-            <path d="M548 130 l18 -52 l33 22 z" fill="#bfb6af"/>
-            <path d="M565 80 l-171 -100 l-17 41 l171 98 z" fill="#f08826"/>
-            <path d="M545 132 l1 -13 l42 -26 l8 9 z" fill="#964607"/>
 		
 	     <!-- รั้วก้อนๆ1 -->
             <path d="M270 660 l44 13 l0 44 l-45 -15 z" fill="#dcdcdc"/>
@@ -313,8 +314,7 @@
         <path d="M93 322 l10 -8 l-1 21 l-9 8 z" fill="#48D252"/>
         <path d="M73 322 l8 -8 l22 0 l-10 8 z" fill="#41CD4C"/>
 
-        <!-- ระเบียง -->
-        <path d="M325 170 l1 21 z" fill="#80ff10"/>
+
 
 
 
